wip: fix ExceptionHandler messing up order of fields